--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   flutter_bloc:
   http:
   dio:
+  # digit_ui_components:
+  #   git:
+  #     url: https://github.com/egovernments/DIGIT-UI-LIBRARIES/
+  #     ref: enhancement-branch-flutter
+  #     path: ./flutter/digit-ui-components/digit_components
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
